Remove unnecessary files. Change READMY.md