@@ -1,6 +1,17 @@
-# project
-Codebase for Design &amp; Implementation phases of our CS520 project.
+## Project details
+Term project–Design and Implementation-Part 1 
+Team Noakhali
 
-Ian was here!
-Katarina was here!
-Chenghao was here!
+## How to run:
+
+run in terminal:
+
+       `java --module-path "path/to/JavaFX-sdk/lib" --add-modules javafx.controls,javafx.fxml App`
+
+!!!Necessary to replace "path/to/JavaFX-sdk/lib" with the correct path to JavaFX libraries
+
+
+## Comments for the APP use:
+
+Before doing any new operations with drone, it is necessary to wait until the drone finishes its current flight.
+
